syntax = "proto3";

package protocol;

option go_package = "/protocol";

import "user.proto";

message SignInReq {
  User user = 1;
}

message SignInRes {
  string token = 1;
}